src/types/tests/snapshots/tgbot__types__tests__inline_mode__inline_query_result_contact-2.snap
---
source: src/types/tests/inline_mode.rs
expression: "InlineQueryResult::from(result)"
---
{
  "first_name": "name",
  "phone_number": "phone",
  "id": "id",
  "type": "contact"
}
