src/types/tests/snapshots/tgbot__types__tests__inline_mode__inline_query_result_game-2.snap
---
source: src/types/tests/inline_mode.rs
expression: "InlineQueryResult::from(InlineQueryResultGame::new(\"name\", \"id\"))"
---
{
  "game_short_name": "name",
  "id": "id",
  "type": "game"
}
